// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SuccessIcon [common] example testing should match snapshot(s) for 1.default 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-SuccessIcon"
  isBadge={false}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <circle
    className="lucid-SuccessIcon-background"
    cx="8"
    cy="8"
    r="8"
  />
  <path
    className="lucid-SuccessIcon-check"
    d="M11.92,5.189L11.701,4.96c-0.285-0.285-0.75-0.285-1.033,0l-4.13,4.127L4.791,7.474 c-0.286-0.286-0.748-0.286-1.033,0L3.471,7.816c-0.286,0.286-0.286,0.746,0,1.033l2.485,2.354c0.285,0.285,0.748,0.285,1.033,0 l4.932-4.98C12.205,5.938,12.205,5.475,11.92,5.189z"
  />
</Icon>
`;

exports[`SuccessIcon [common] example testing should match snapshot(s) for 2.clickable 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-SuccessIcon lucid-SuccessIcon-is-clickable"
  isBadge={false}
  isClickable={true}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <circle
    className="lucid-SuccessIcon-background"
    cx="8"
    cy="8"
    r="8"
  />
  <path
    className="lucid-SuccessIcon-check"
    d="M11.92,5.189L11.701,4.96c-0.285-0.285-0.75-0.285-1.033,0l-4.13,4.127L4.791,7.474 c-0.286-0.286-0.748-0.286-1.033,0L3.471,7.816c-0.286,0.286-0.286,0.746,0,1.033l2.485,2.354c0.285,0.285,0.748,0.285,1.033,0 l4.932-4.98C12.205,5.938,12.205,5.475,11.92,5.189z"
  />
</Icon>
`;

exports[`SuccessIcon [common] example testing should match snapshot(s) for 3.disabled 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-SuccessIcon"
  isBadge={false}
  isDisabled={true}
  size={16}
  viewBox="0 0 16 16"
>
  <circle
    className="lucid-SuccessIcon-background lucid-SuccessIcon-background-is-disabled"
    cx="8"
    cy="8"
    r="8"
  />
  <path
    className="lucid-SuccessIcon-check"
    d="M11.92,5.189L11.701,4.96c-0.285-0.285-0.75-0.285-1.033,0l-4.13,4.127L4.791,7.474 c-0.286-0.286-0.748-0.286-1.033,0L3.471,7.816c-0.286,0.286-0.286,0.746,0,1.033l2.485,2.354c0.285,0.285,0.748,0.285,1.033,0 l4.932-4.98C12.205,5.938,12.205,5.475,11.92,5.189z"
  />
</Icon>
`;
